Changes in 0.5.3:

* The cached or pre-existing changesets are now double checked against
  the latest version from the repository before they are used for
  installable ISO images.
* Images can now have descriptions stored with each image file.

Changes in 0.5.2:

* JobsTable moved to a subclass of KeyedTable.
* Switch to using dnspython from socket.gethostbyname
  to make sure an email server has a valid MX record.
* Don't depend on a browser passing in values from the submit
  button; instead use a separate hidden value.
* Several other error messages are properly marshalled along XMLRPC.
* Several broken URLs were fixed.
* Repositories now keep contents logs for ease of backup.

Changes in 0.5.1:

* Documentation improvements
* Some minor bug fixes

Changes in 0.5.0:

* Lots of documentation added.
* News is displayed as HTML, not plain text, mainly so links and paragraph breaks are preserved.
* constants.py stores the current version of Mint code.
* Hidden projects are now suppressed where necessary from userInfo page.
* HTML output degrades to HTML 4.0 for browsers that don't support XHTML.
* Traceback email now includes a lot more information about the
  http request that triggered the error.

Changes in 0.4.8:

* Fixed the repository browser again for non-members by
  switching from the broken shim client to the working netclient.
* Fixed a few typos.

Changes in 0.4.7:

* Also output repository browser HTML as text/html.

Changes in 0.4.6:

* Output strict HTML using the text/html content type instead of
  XHTML with application/xml+xhtml content type for IE compatibilty.

Changes in 0.4.5:

* Fixed access to repository browser by logged-in non-members of a project
* Fixed redirect of reserved hosts.

Changes in 0.4.4:

* Small bug fixes.

Changes in 0.4.3:

* Cosmetic changes.

Changes in 0.4.2:

* Fix urls in package search results page.
* Add a "corpSite" configuration option to point certain links
  at an outside site.